test: clear backend sonar gate with 91 percent coverage